--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.15.0",
-    "express": "^5.1.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "google-auth-library": "^10.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
