--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "google-auth-library": "^10.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.3",
     "otp-generator": "^4.0.1",
