--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
     "twilio": "^4.19.2",
-    "url": "^0.11.4"
+    "url": "^0.11.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vercel/node": "^5.3.5",
